force-app/main/default/objects/ConfiguredPart__c/ConfiguredPart__c.object-meta.xml
<CustomObject>
    <label>Configured Part</label>
    <nameField>
        <label>Configured Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>