force-app/main/default/objects/ConfiguredPart__c/fields/Configurator__c.field-meta.xml
<CustomField>
    <fullName>Configurator__c</fullName>
    <label>Configurator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BGR</fullName>
                <label>Blanket Gas Regulator</label>
            </value>
            <value>
                <fullName>FA</fullName>
                <label>Flame Arrester</label>
            </value>
            <value>
                <fullName>RV</fullName>
                <label>Relief Valve</label>
            </value>
            <value>
                <fullName>RD</fullName>
                <label>Rupture Disc</label>
            </value>
            <value>
                <fullName>RDH</fullName>
                <label>Rupture Disc Holder</label>
            </value>
            <value>
                <fullName>WGB</fullName>
                <label>Waste Gas Burner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>