force-app/main/default/objects/ConfiguredPart__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the part should be removed from the published catalog listing.</description>
    <inlineHelpText>Specifies if the part should be removed from the published catalog listing.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>