force-app/main/default/objects/ConfiguredPart__c/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the part revision should be archived to signal a new revision be calculated.</description>
    <inlineHelpText>Specifies if the part revision should be archived to signal a new revision be calculated.</inlineHelpText>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>