force-app/main/default/objects/ConfiguredPart__c/fields/IsSpecial__c.field-meta.xml
<CustomField>
    <fullName>IsSpecial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special</label>
    <type>Checkbox</type>
</CustomField>