force-app/main/default/objects/ConfiguredPart__c/fields/PartArchivalNumber__c.field-meta.xml
<CustomField>
    <fullName>PartArchivalNumber__c</fullName>
    <description>Part Revision number for newer versions of existing parts.</description>
    <inlineHelpText>Part Revision number for newer versions of existing parts.</inlineHelpText>
    <label>Part Archival Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>