force-app/main/default/objects/ConfiguredPart__c/fields/PartConfigurator_PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartConfigurator_PartNumber__c</fullName>
    <description>Published part number which may be ordered.</description>
    <inlineHelpText>Published part number which may be ordered.</inlineHelpText>
    <label>Part Configurator (Part Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>