force-app/main/default/objects/ConfiguredPart__c/fields/PartKey01__c.field-meta.xml
<CustomField>
    <fullName>PartKey01__c</fullName>
    <label>Part Key 01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>