force-app/main/default/objects/ConfiguredPart__c/fields/PartKey02__c.field-meta.xml
<CustomField>
    <fullName>PartKey02__c</fullName>
    <label>Part Key 02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>