force-app/main/default/objects/ConfiguredPart__c/fields/PartKey__c.field-meta.xml
<CustomField>
    <fullName>PartKey__c</fullName>
    <formula>PartKey01__c + BLANKVALUE(PartKey02__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Key</label>
    <type>Text</type>
</CustomField>