force-app/main/default/objects/ConfiguredPart__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <formula>IF ( IsArchived__c , PartConfigurator_PartNumber__c &amp; &quot;-&quot; &amp; TEXT(PartArchivalNumber__c) ,  PartConfigurator_PartNumber__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>