force-app/main/default/objects/ConfiguredPart__c/validationRules/Active_Archive_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Archive_Check</fullName>
    <active>true</active>
    <description>Cannot be Archived and Active.</description>
    <errorConditionFormula>IsArchived__c  =  True &amp;&amp; IsActive__c  = True</errorConditionFormula>
    <errorMessage>Part cannot be Active and Archived</errorMessage>
</ValidationRule>