force-app/main/default/objects/ConfiguredPart__c/listViews/All_Configured_Part_Records.listView-meta.xml
<ListView>
    <fullName>All_Configured_Part_Records</fullName>
    <columns>NAME</columns>
    <columns>Configurator__c</columns>
    <columns>PartNumber__c</columns>
    <columns>IsSpecial__c</columns>
    <columns>ManagedIn__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsArchived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configured Part Records</label>
</ListView>